# local-semantic-navigation

./: README.md  pyproject.toml
src/local_semantic_navigation/: __init__.py
